--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=artgallery
-spring.datasource.url=jdbc:mysql://root:sQjJcHtImDfGTEYcnTpuDCcWKsHDSNnC@junction.proxy.rlwy.net:22723/railway
+spring.datasource.url=jdbc:mysql://root:MEdCPCvIWIfVBkAWRlBPtMXqzkkZnMPS@autorack.proxy.rlwy.net:28002/railway
 spring.datasource.username=root
 spring.datasource.password=sQjJcHtImDfGTEYcnTpuDCcWKsHDSNnC
 spring.jpa.hibernate.ddl-auto=update
